# pVBARMS

./: CMakeLists.txt  README  README_INSTALL  makefile  makefile.in  makefile_complex.in  makefile_real.in
examples/general/: Bdd-HB-dse.c  Bdd-bin-dse.c  Bdd-mtx-dse.c  CMakeLists.txt  Gsearch  README  aux.c  aux.h  complexcompile  dd-HB-dse.c  dd-bin-dse.c  dd-mtx-dse.c  inputs  makefile  matfileCmplx  matfileReal  mmio.c  mmio.h  realcompile  recompile  runtest2.py  runtest2.sh  runtest3.py  skit.f  testdriver (copy).c  testdriver.c  testdriverfile.c
examples/general/script/: Gsearch
examples/petsc/: skit.f
include/: fparms.h  parms_comm.h  parms_map.h  parms_mat.h  parms_pc.h  parms_solver.h  parms_sys.h  parms_sys_cmplx.h  parms_vec.h
src/: CMakeLists.txt  fgmres.c  gmres.c  parms_comm.c  parms_complex.c  parms_ilu_vcsr.c  parms_map.c  parms_mat.c  parms_mat_dvcsr.c  parms_mat_vcsr.c  parms_mem.c  parms_operator.c  parms_pc.c  parms_pc_bj.c  parms_pc_ras.c  parms_pc_schur.c  parms_pc_schurras.c  parms_qsplit.c  parms_solver.c  parms_timer.c  parms_vbilu_vcsr.c  parms_vec.c  parms_viewer.c
src/DDPQ/: CMakeLists.txt  MatOps.c  PQ.c  arms2.c  barms2.c  barmsmisc.c  barmsmiscold.c  cliques (copy).c  cliques.c  cliquestest  cliquestest.c  diff.diff  globheads.h  makefile  misc.c  profile.c  profile.h  protos.h  setblks.c  sets.c  tools.f  vbiluNEW.c  vbiluk.c  vbilut.c
src/include/: CMakeLists.txt  parms.h  parms_comm_impl.h  parms_map_impl.h  parms_mat_impl.h  parms_operator.h  parms_opt_impl.h  parms_pc_impl.h  parms_solver_impl.h  parms_vec.h
